[package]
name = "pngme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
crc = "3.0.1"
rocket = { git = "https://github.com/rwf2/Rocket", rev = "3bf9ef02d6e803fe9f753777f5a829dda6d2453d" , features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1", features = ["full"] }